Many additions, bug fixes, working AI features (parsing TODO)