@@ -1,5 +1,6 @@
 package com.visionvista;
 
+import com.visionvista.commands.AICommands;
 import com.visionvista.effects.Effect;
 import com.visionvista.effects.transformation.Resize;
 import com.visionvista.utils.ImageHelper;
@@ -15,6 +16,8 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 
@@ -22,7 +25,7 @@ public class ImageHandler {
     public EffectHistory effectHistory;
     public ImageEditor editor;
 
-    public String file_name_broken[];
+    public String fileNameBroken[];
 
     public ImageHandler() {
         this.effectHistory = new EffectHistory();
@@ -34,12 +37,13 @@ public class ImageHandler {
         int returnValue = fileChooser.showOpenDialog(null);
         if (returnValue == JFileChooser.APPROVE_OPTION) {
             File selectedFile = fileChooser.getSelectedFile();
-            String file_name_raw = selectedFile.getName();
+            String fileNameRaw = selectedFile.getName();
             //Splits by necessary parts of file name - name and extension
-            file_name_broken = file_name_raw.split("[.]");
+            fileNameBroken = fileNameRaw.split("[.]");
 
             try {
                 BufferedImage image = ImageIO.read(selectedFile);
+                //Try to resize image if too large
                 Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
                 int screenWidth = (int) screenSize.getWidth();
                 int screenHeight = (int) screenSize.getHeight();
@@ -49,6 +53,7 @@ public class ImageHandler {
                     image = new Resize(screenWidth, image.getHeight() / convertRatio).run(image);
                 }
                 else if (image.getHeight() > screenHeight) {
+                    System.out.println("Height too");
                     int convertRatio = image.getHeight() / screenHeight;
                     image = new Resize(image.getWidth() / convertRatio, screenHeight).run(image);
                 }
@@ -59,7 +64,7 @@ public class ImageHandler {
                 effectHistory.add(null, image);
                 EditorState.getInstance().setState(effectHistory);
 
-                editor = new ImageEditor("Image editor", file_name_broken);
+                editor = new ImageEditor("Vision Vista", fileNameBroken);
                 editor.show();
             } catch (Exception ex) {
                 JOptionPane.showMessageDialog(null, "Error loading image.");
@@ -88,18 +93,18 @@ public class ImageHandler {
             public void actionPerformed(ActionEvent e) {
                 try {
                     //Process URL to necessary file parts
-                    URL img_url = new URL(urlField.getText());
-                    file_name_broken = urlField.getText().split("[/]");
-                    file_name_broken = file_name_broken[file_name_broken.length-1].split("[.]");
+                    URL img_url = new URI(urlField.getText()).toURL();
+                    fileNameBroken = urlField.getText().split("[/]");
+                    fileNameBroken = fileNameBroken[fileNameBroken.length-1].split("[.]");
                     //Setup program
                     BufferedImage image = ImageIO.read(img_url);
                     EditorState.getInstance().setImage(image);
                     effectHistory.add(null, image);
                     EditorState.getInstance().setState(effectHistory);
 
-                    editor = new ImageEditor("Image editor", file_name_broken);
+                    editor = new ImageEditor("Vision Vista", fileNameBroken);
                     editor.show();
-                } catch (IOException ex) {
+                } catch (IOException | URISyntaxException ex) {
                     ex.printStackTrace();
                 }
             }
@@ -120,7 +125,7 @@ public class ImageHandler {
             File selectedFile = fileChooser.getSelectedFile();
             String file_name_raw = selectedFile.getName();
             //Splits by necessary parts of file name - name and extension
-            file_name_broken = file_name_raw.split("[.]");
+            fileNameBroken = file_name_raw.split("[.]");
 
             try {
                 FileInputStream imageInFile = new FileInputStream(selectedFile.getAbsoluteFile());
@@ -132,7 +137,7 @@ public class ImageHandler {
                 effectHistory = new EffectHistory();
                 effectHistory.setEffectSequence(effectsList, initialImage);
                 EditorState.getInstance().setState(effectHistory);
-                editor = new ImageEditor("Image editor", file_name_broken);
+                editor = new ImageEditor("Vision Vista", fileNameBroken);
                 editor.show();
 //                BufferedImage image = ImageIO.read(selectedFile);
 //                //Set the original image to be displayed
@@ -150,14 +155,16 @@ public class ImageHandler {
         }
     }
 
+    public void generateImageFromPrompt(JFrame landingFrame) throws Exception {
+        AICommands aiCommands = new AICommands();
+        aiCommands.createImageGenerationCommand(landingFrame).execute();
+    }
+
     public void createNewImage() {
         //TODO
         BufferedImage blankImg = ImageHelper.createBlankImage();
-        ImageHelper.createBlankImage();
-//        MenuPanel menuPanel = new MenuPanel();
-        ButtonPanel buttonPanel = new ButtonPanel();
-        editor = new ImageEditor("Image editor - Draw", null);
-//        editor.addButtonPanel(buttonPanel.setupButtonPanel(blankImg));
+        EditorState.getInstance().setImage(blankImg);
+        editor = new ImageEditor("Vision Vista - Draw", null);
         editor.show();
 //        inputValuesEffect(new ImageEdit(blank_img), "Blank", new String[]{"Width", "Height"});
     }
